fix line wrap for firefox

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -356,6 +356,7 @@ body {
 
 	.body {
 		word-break:break-word;
+		word-wrap:break-word;
 		max-width:100%;
 		pre {
 			tab-size:3;
